--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
-:root{
-  --bg:#f2e6d8;
-  --saida-bg:#f2f2f2;
-  --cor-secundaria:#f2cb9b;
-  --cor-tercearia:#59271c;
+:root {
+  --bg: #f2e6d8;
+  --saida-bg: #f2f2f2;
+  --cor-secundaria: #f2cb9b;
+  --cor-tercearia: #59271c;
   --fonte-detalhes: "Arial Black", Helvetica, sans-serif;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 .saida {
-  width: 18%;
+  width: 20%;
   background-color: var(--saida-bg);
   border-radius: 10px;
   display: flex;
@@ -43,22 +43,24 @@ body {
 .copiar {
   border: none;
   border-radius: 15px;
-  padding: 7px 30px;
-  font-family:var(--fonte-detalhes) ;
+  padding: 2% 2.5%;
+  font-family: var(--fonte-detalhes);
   font-weight: 500;
   background-color: var(--cor-secundaria);
-  width:50%;
-
+  width: 50%;
+  text-align: center;
 }
 
 #encriptar {
   background-color: var(--cor-secundaria);
   border: none;
   border-radius: 15px;
-  padding: 7px 30px;
+  padding: 2% 2.5%;
   color: var(--cor-tercearia);
   font-family: var(--fonte-detalhes);
   font-weight: 500;
+  width: 12vw;
+  text-align: center;
 }
 
 #descriptar {
@@ -66,24 +68,26 @@ body {
   border: none;
   border-radius: 15px;
   color: var(--cor-secundaria);
-  padding: 7px 30px;
+  padding: 2% 2.5%;
   font-family: var(--fonte-detalhes);
   font-weight: 500;
+  width: 12vw;
+  text-align: center;
 }
-.conteudo__imagem{
+.conteudo__imagem {
   display: flex;
   flex-direction: column;
-  padding: .5%;
+  padding: 0.5%;
 }
-.conteudo__imagem img{
+.conteudo__imagem img {
   width: 70px;
 }
 
-.conteudo__container{
+.conteudo__container {
   display: flex;
 }
 
-.mensagem{
+.mensagem {
   display: block;
   flex-direction: column;
   text-align: center;
@@ -91,31 +95,77 @@ body {
 
 label {
   display: flex;
-  align-items:center;
+  align-items: center;
   position: relative;
   left: 100%;
   margin-bottom: 0.2rem;
-
 }
 
 .conteudo__texto:focus {
   outline: 0;
 }
 
-footer{
+footer {
   text-align: center;
   margin: 1%;
   padding: 10px;
 }
 
-.marca{
+.marca {
   width: 100px;
 }
 
-.link{
+.link {
   text-decoration: none;
   color: var(--cor-tercearia);
 }
-.link:hover{
+.link:hover {
   color: var(--cor-secundaria);
+}
+
+@media (max-width: 1200px) {
+  .conteudo {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .conteudo__imagem img {
+    display: none;
+  }
+
+  .saida {
+    width: 50vw;
+    padding: 2%;
+    margin: 1%;
+    align-items: center;
+  }
+}
+
+@media (max-width: 850px) {
+  .conteudo__texto{
+    width: 80%;
+  }
+  
+  .conteudo__botoes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3%;
+  }
+
+  #encriptar{
+    width: 40vw;
+    margin: 3%;
+  }
+
+  #descriptar{
+    width: 40vw;
+    margin: 3%;
+  }
+
+
+  .saida{
+    width: 80vw;
+    margin: auto;
+  }
 }
