--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,6 +38,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  padding: 10px;
 }
 
 .copiar {
@@ -49,6 +50,8 @@ body {
   background-color: var(--cor-secundaria);
   width: 50%;
   text-align: center;
+  cursor: pointer;
+
 }
 .conteudo__botoes{
   display: flex;
@@ -65,6 +68,7 @@ body {
   font-weight: 500;
   width: 15vw;
   text-align: center;
+  cursor: pointer;
 }
 
 #descriptar {
@@ -78,6 +82,8 @@ body {
   font-weight: 500;
   width: 15vw;
   text-align: center;
+  cursor: pointer;
+
 }
 .conteudo__imagem {
   display: flex;
